--- a/configs/benchmark-configs.json
+++ b/configs/benchmark-configs.json
@@ -4,9 +4,11 @@
       "keyspacelen": [10000000],
       "data_sizes": [16],
       "pipelines": [10],
+      "clients": [50],
       "commands": ["SET", "GET", "RPUSH", "LPUSH", "LPOP", "SADD", "SPOP", "HSET"],
       "cluster_modes": ["no"],
       "tls_modes": ["no"],
-      "warmup": [10]
+      "warmup": [10],
+      "deployment": "single"
     }
   ]
