--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -5,6 +5,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+defaults:
+  run:
+    shell: 'bash -Eeuo pipefail -x {0}'
+
 jobs:
   test:
     runs-on: ubuntu-latest
