--- a/.github/workflows/dashboard_sync.yml
+++ b/.github/workflows/dashboard_sync.yml
@@ -32,9 +32,8 @@ jobs:
             --exclude ".git/*" \
             --exclude "*.md"
           
-    #   - name: Invalidate CloudFront (if applicable)
-    #     if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
-    #     run: |
-    #       aws cloudfront create-invalidation \
-    #         --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-    #         --paths "/dashboard/*"
+      - name: Invalidate CloudFront (if applicable)
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.AWS_CDN_ID }} \
+            --paths "/*"
