--- a/.github/workflows/valkey_benchmark.yml
+++ b/.github/workflows/valkey_benchmark.yml
@@ -8,8 +8,8 @@ on:
         required: false
         default: '3'
         type: string
-  schedule:
-    - cron: '*/25 * * * *'
+  # schedule:
+  #   - cron: '*/25 * * * *'
 
 defaults:
   run:
