--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -11,7 +11,7 @@ defaults:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ec2-ubuntu-24]
     
     steps:
     - name: Checkout repository
