--- a/.github/workflows/valkey_benchmark.yml
+++ b/.github/workflows/valkey_benchmark.yml
@@ -25,7 +25,7 @@ jobs:
       BRANCH: unstable     
       MAX_COMMITS: ${{ inputs.max_commits || '3' }}  
 
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ec2-ubuntu-24]
 
     steps:
       - name: Set up Python
