Enable cluster and TLS mode

--- a/configs/benchmark-configs-cluster-tls.json
+++ b/configs/benchmark-configs-cluster-tls.json
@@ -6,8 +6,8 @@
       "pipelines": [10],
       "clients": [50],
       "commands": ["SET", "GET", "RPUSH", "LPUSH", "LPOP", "SADD", "SPOP", "HSET"],
-      "cluster_mode": "no",
-      "tls_mode": "no",
+      "cluster_mode": "yes",
+      "tls_mode": "yes",
       "warmup": [10]
     }
   ]
