Adds custom server configs support
Signed-off-by: Roshan Khatri <rvkhatri@amazon.com>

--- a/configs/benchmark-configs.json
+++ b/configs/benchmark-configs.json
@@ -23,6 +23,9 @@
     "cluster_mode": false,
     "tls_mode": false,
     "warmup": 10,
-    "benchmark-threads": 2
+    "benchmark-threads": 2,
+    "custom-server-configs": {
+      "maxmemory": "2gb"
+    }
   }
 ]
