Add module support for Full text search performance tests (#23)
Signed-off-by: Ram Prasad Voleti <ramvolet@amazon.com>

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ dashboards/*.pem
 
 # Logs
 *.log
+
+# Datasets - generated/downloaded via scripts/setup_datasets.py
+datasets/*
+
+# Flamegraph scripts (downloaded on demand from GitHub) and we cache them
+scripts/stackcollapse-perf.pl
+scripts/flamegraph.pl
