Pin Python dependencies with hashes for supply chain security
Add requirements.in as the human-editable source and generate
requirements.txt with pip-compile --generate-hashes, pinning all
direct and transitive dependencies. Resolves OpenSSF Scorecard
"Pinned-Dependencies" finding.

Signed-off-by: Roshan Khatri <rvkhatri@amazon.com>

--- a/.github/workflow-templates/pr-benchmark-template.yml
+++ b/.github/workflow-templates/pr-benchmark-template.yml
@@ -67,7 +67,7 @@ jobs:
       
       - name: Install Python dependencies
         working-directory: valkey-perf-benchmark
-        run: pip install -r requirements.txt
+        run: pip install --require-hashes -r requirements.txt
       
       # Core: Build PR and baseline valkey
       - name: Build PR version (Core)
