--- a/.github/workflows/benchmark_release_tags.yml
+++ b/.github/workflows/benchmark_release_tags.yml
@@ -72,7 +72,7 @@ jobs:
         run: |
           sudo dnf groupinstall "Development Tools" -y
           sudo dnf install -y gcc gcc-c++ make python3-devel openssl-devel bzip2-devel libffi-devel
-          pip install -r requirements.txt
+          pip install --require-hashes -r requirements.txt
 
       - name: Build latest benchmark and move to a different dir.
         working-directory: valkey
