--- a/.github/workflows/cluster_tls.yml
+++ b/.github/workflows/cluster_tls.yml
@@ -26,7 +26,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install --require-hashes -r requirements.txt
 
     - name: Run benchmark on TLS enabled clusters
       run: |
